--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["katattakd <katattakd@pm.me>"]
 [dependencies]
 ammonia = "3.1.0"
 comrak = "0.7.0"
+exitcode = "1.1.2"
 glob = "0.3.0"
 hyperbuild = "0.0.44"
 rayon = "1.3.0"
