--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ exitcode = "1.1.2"
 glob = "0.3.0"
 hyperbuild = "0.0.44"
 liquid = "0.20.0"
+minifier = "0.0.36"
 rayon = "1.3.0"
 serde = "1.0.106"
 serde_derive = "1.0.106"
