--- a/conf.toml
+++ b/conf.toml
@@ -12,4 +12,4 @@ minify_generated = true # Minify document HTML after it's been generated.
 
 [plugins] # KatSite plugin settings
 enable_core = true # Core is a built-in plugin that adds a doctype and viewport, and should not be disabled unless necessary.
-plugins_list = ["./basic-site.sh"] # Loads the "basic-site" plugin.
+plugins_list = ["./basic-navbar.sh", "./basic-theme.sh"] # Loads the "basic-navbar" and "basic-theme" plugins, in that order.
