--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,18 +3,23 @@ name = "katsite"
 license = "MIT"
 version = "0.1.0"
 authors = ["katattakd <katattakd@pm.me>"]
+default-run = "katsite"
 
 [dependencies]
 comrak = "0.7.0"
 exitcode = "1.1.2"
 glob = "0.3.0"
-hyperbuild = "0.0.44"
-liquid = "0.20.0"
 minifier = "0.0.36"
 rayon = "1.3.0"
 serde = "1.0.106"
 serde_derive = "1.0.106"
 toml = "0.5.6"
+
+# Minifier plugin
+hyperbuild = "0.0.44"
+
+# Liquid plugin
+liquid = "0.20.0"
 
 [profile.dev]
 rpath = true
