--- a/conf.toml
+++ b/conf.toml
@@ -4,12 +4,7 @@ convert_punctuation = true # Convert simple punctuation into smart punctuation (
 enable_raw_html_inlining = true # Allow inline HTML to be used in markdown files.
 enable_github_extensions = true # Enable GitHub markdown extensions (strikethrough, tables, automatic links, task lists.
 enable_comrak_extensions = true # Enable Comrak markdown extensions (superscript, footnotes, description lists).
-enable_liquid_templating = true # Enable Liquid templating language.
-
-[minifier] # HTML minifier settings
-# Note that the minifier can cause problems. All sites using it should check that the generated HTML displays properly in major browsers before uploading it.
-minify_generated = true # Minify document HTML after it's been generated.
 
 [plugins] # KatSite plugin settings
 enable_core = true # Core is a built-in plugin that adds a doctype and viewport, and should not be disabled unless necessary.
-plugins_list = ["./basic-navbar.sh", "./basic-theme.sh"] # Loads the "basic-navbar" and "basic-theme" plugins, in that order.
+plugins_list = ["liquid", "./basic-navbar.sh", "./basic-theme.sh", "minifier"] # Load built-in plugins in this order.
