--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "katsite"
 license = "MIT"
 version = "0.1.0"
 authors = ["katattakd <katattakd@pm.me>"]
+edition = '2018'
 default-run = "katsite"
 
 [dependencies]
@@ -14,12 +15,6 @@ rayon = "1.3.0"
 serde = "1.0.106"
 serde_derive = "1.0.106"
 toml = "0.5.6"
-
-# Minifier plugin
-hyperbuild = "0.0.44"
-
-# Liquid plugin
-liquid = "0.20.0"
 
 [profile.dev]
 rpath = true
