--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ comrak = "0.7.0"
 exitcode = "1.1.2"
 glob = "0.3.0"
 minifier = "0.0.36"
+pulldown-cmark = "0.7.1"
 rayon = "1.3.0"
 serde = "1.0.106"
 serde_derive = "1.0.106"
