--- a/conf.toml
+++ b/conf.toml
@@ -1,11 +1,30 @@
-[markdown] # Markdown parser settings. These are best left at defaults, changing them can break some plugins.
+# Many of these settings can break things if changed, and are only for advanced users.
+# The only setting most users should ever need to touch is plugins_list.
+
+# Additional notes for users needing extra performance:
+# - Use as few plugins as possible.
+# - For advanced users:
+#   - If filter_*, convert_*, and enable_*_extensions is false, and enable_raw_* is true, KatSite will use a significantly faster parser (pulldown-cmark instead of comrak).
+#   - If no plugins are being loaded, KatSite will skip over plugin functions, and run significantly faster. Embedded use cases should manipulate the HTML after KatSite is finished running, instead of using the plugin system.
+#   - Try playing around with the thread_pool_size, to find the best value for your system.
+
+# Additional notes for advanced users:
+# - Changing the settings from defaults will likely break third-party plugins, even though they should work fine with the built-in plugins. Do not change them unless necessary.
+
+thread_pool_size = 0 # Limit the size of the thread pool. Setting this to zero will automatically determine the optimal number of threads.
+
+[markdown] # Markdown parser settings.
+filter_html_tags = false # Remove the title, textarea, style, xmp, iframe, noembed, noframes, script, and plaintext HTML tags.
 convert_line_breaks = false # Convert soft line breaks (newlines) into hard line breaks.
-convert_punctuation = true # Convert simple punctuation into smart punctuation (curly quotes).
+convert_punctuation = true  # Convert simple punctuation into smart punctuation (curly quotes).
 enable_raw_html_inlining = true # Allow inline HTML to be used in markdown files.
 enable_github_extensions = true # Enable GitHub markdown extensions (strikethrough, tables, automatic links, task lists.
 enable_comrak_extensions = true # Enable Comrak markdown extensions (superscript, footnotes, description lists).
 
-[plugins] # KatSite plugin settings
-enable_core = true # Core is a built-in plugin that adds a doctype and viewport, and should not be disabled unless necessary.
+[html] # HTML generator settings.
+append_5doctype = true # Append an HTML5 doctype to the final document.
+append_viewport = true # Append a responsive viewport tag to the final document.
+
+[plugins] # KatSite plugin settings.
 plugins_list = ["navbar-simple.sh", "theme-basic.sh", "minifier.sh"] # Load built-in plugins in this order.
 
