--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,19 +3,26 @@ name = "katsite"
 license = "MIT"
 version = "0.1.0"
 authors = ["katattakd <katattakd@pm.me>"]
+description = "A minimal and flexible site generator using Markdown."
+repository = "https://github.com/katattakd/KatSite"
+readme = "README.md"
+keywords = ["generator", "static", "site", "blog"]
+categories = ["command-line-utilities", "text-processing"]
 edition = '2018'
 default-run = "katsite"
 
+[workspace]
+members = ["katsite-essentials"]
+
 [dependencies]
-comrak = "0.7.0"
-exitcode = "1.1.2"
-glob = "0.3.0"
-minifier = "0.0.36"
-pulldown-cmark = "0.7.1"
-rayon = "1.3.0"
-serde = "1.0.106"
-serde_derive = "1.0.106"
-toml = "0.5.6"
+comrak = "=0.7.0"
+exitcode = "=1.1.2"
+glob = "=0.3.0"
+pulldown-cmark = "=0.7.1"
+rayon = "=1.3.0"
+serde = "=1.0.111"
+serde_derive = "=1.0.111"
+toml = "=0.5.6"
 
 [profile.dev]
 rpath = true
