--- a/conf.toml
+++ b/conf.toml
@@ -29,6 +29,7 @@ append_viewport = true # Append a responsive viewport tag to the final document.
 plugins_list = ["katsite-essentials"] # Load plugins in this order.
 
 [katsite_essentials] # Settings for the katsite-essentials plugin
-theme = "basic" # Load the "basic" theme. Set this to "none" to disable theming.
+theme = "demo" # Load the "basic" theme. Set this to "none" to disable theming.
+theme_hometxt = "Home" # The text for your theme's "Home" button. This may be unused in some themes.
 minifier = true # Minify output HTML.
 
