--- a/conf.toml
+++ b/conf.toml
@@ -1,15 +1,12 @@
-# Many of these settings can break things if changed, and are only for advanced users.
-# The only setting most users should ever need to touch is plugins_list.
-
 # Additional notes for users needing extra performance:
 # - Use as few plugins as possible.
 # - For advanced users:
-#   - If filter_*, convert_*, and enable_*_extensions is false, and enable_raw_* is true, KatSite will use a significantly faster parser (pulldown-cmark instead of comrak).
+#   - If filter_*, convert_*, create_*, and enable_*_extensions is false, and enable_raw_* is true, KatSite will use a significantly faster parser (pulldown-cmark instead of comrak).
 #   - If no plugins are being loaded, KatSite will run significantly faster. Embedded use cases should manipulate the HTML after KatSite is finished running, instead of using the plugin system.
 #   - Try playing around with the thread_pool_size, to find the best value for your system.
 
 # Additional notes for advanced users:
-# - Changing the settings from defaults will likely break third-party plugins, even though most changes should work fine with the built-in plugins. Do not change them unless necessary.
+# - Changing the markdown settings from defaults will likely break third-party plugins, even though most changes should work fine with the built-in plugins. Do not change them unless necessary.
 
 thread_pool_size = 0 # Limit the size of the thread pool. Setting this to zero will automatically determine the optimal number of threads.
 
@@ -24,6 +21,7 @@ enable_comrak_extensions = true # Enable Comrak markdown extensions (superscript
 [html] # HTML generator settings.
 append_5doctype = true # Append an HTML5 doctype to the final document.
 append_viewport = true # Append a responsive viewport tag to the final document.
+create_header_anchors = false # Allow creating liks to document headers.
 
 [plugins] # KatSite plugin settings.
 plugins_list = ["katsite-essentials"] # Load plugins in this order.
