--- a/katsite-essentials/Cargo.toml
+++ b/katsite-essentials/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/katattakd/KatSite"
 edition = '2018'
 
 [dependencies]
+brotli = "=3.3.0"
 exitcode = "=1.1.2"
 glob = "=0.3.0"
 htmlescape = "=0.3.1"
