--- a/katsite-essentials/Cargo.toml
+++ b/katsite-essentials/Cargo.toml
@@ -8,14 +8,15 @@ repository = "https://github.com/katattakd/KatSite"
 edition = '2018'
 
 [dependencies]
-brotli = "=3.3.0"
-exitcode = "=1.1.2"
-glob = "=0.3.0"
-htmlescape = "=0.3.1"
-hyperbuild = "*"
-liquid = "*"
-rayon = "*"
-serde = "*"
-serde_derive = "*"
-toml = "*"
+ammonia = "3.1"
+brotli = "3.3"
+exitcode = "1.1"
+glob = "0.3"
+htmlescape = "0.3"
+hyperbuild = "0.0"
+liquid = "0.20"
+rayon = "1.3"
+serde = "1.0"
+serde_derive = "1.0"
+toml = "0.5"
 
