--- a/katsite-essentials/Cargo.toml
+++ b/katsite-essentials/Cargo.toml
@@ -10,6 +10,7 @@ edition = '2018'
 [dependencies]
 ammonia = "3.1"
 brotli = "3.3"
+extract-frontmatter = "1.0"
 exitcode = "1.1"
 glob = "0.3"
 htmlescape = "0.3"
