--- a/conf.toml
+++ b/conf.toml
@@ -1,32 +1,31 @@
 # Additional notes for users needing extra performance:
-# - Use as few plugins as possible. Embedded use cases should manipulate the output HTML, instead of using the plugin system.
-# - If all markdown settings are false, KatSite will use a significantly faster parser (pulldown-cmark instead of comrak).
-# - Try playing around with the thread_pool_size, to find the best value for your system.
+# - Use as few plugins as possible.
+# - Use as few markdown extensions as possible.
 # - For users of katsite-essentials:
 #   - Enable only the features you need. Additional features can slow down site generation.
-#   - Use the config checker to improve your configuration.
 
-thread_pool_size = 0 # Limit the size of the thread pool. Setting this to zero will automatically determine the optimal number of threads.
+plugins_list = ["katsite-essentials"]
+
+[files] # I/O settings.
+input_glob = "./*.md" # Pattern used to find input files.
+output_dir = "./output" # Output directory. If it does not exist, it will automatically be created.
 
 [markdown] # Markdown parser settings.
-convert_line_breaks = false # Convert soft line breaks (newlines) into hard line breaks.
-convert_punctuation = true  # Convert simple punctuation into smart punctuation (curly quotes).
-create_header_anchors = false   # Allow creating links to document headers.
-enable_github_extensions = true # Enable GitHub markdown extensions (strikethrough, tables, automatic links, task lists.
-enable_comrak_extensions = true # Enable Comrak markdown extensions (superscript, footnotes, description lists).
-
-[html] # HTML generator settings.
-append_5doctype = true # Append an HTML5 doctype to the final document.
-append_viewport = true # Append a responsive viewport tag to the final document.
-
-[plugins] # KatSite plugin settings.
-plugins_list = ["katsite-essentials"] # Load plugins in this order.
+github_extensions = true # Enable GitHub markdown extensions (header ids, strikethrough, tables, automatic links, task lists).
+comrak_extensions = true # Enable Comrak markdown extensions (curly quotes, superscript, footnotes, description lists).
 
 [katsite_essentials] # Settings for the katsite-essentials plugin
+name = "My Website" # The name of your website.
+
+og_stub = "https://example.com" # The stub url used for generating the og:url page attribute.
+default_lang = "en"         # The default language for pages.
+default_og_type = "website" # The default Open Graph type for pages.
+default_is_nsfw = false     # The default NSFW status for pages.
+default_allow_robots = true # The default "robots" policy for pages.
+
 theme = "demo" # Load the "basic" theme. Set this to "none" to disable theming.
-homepage_title = "My Website" # The title for your site's home page. Implementation of this is theme-specific, some themes may not use it.
-config_checker = true # Check your KatSite config, and give recommendations on how you can improve it.
-liquid = true # Enable Liquid templating. Disabling this will disable theming and page titles.
-sanitizer = false # Sanitize output HTML. Enabling this will disable liquid templating.
+layout = "layout.liquid" # Use the "layout.liquid" file for generating pages.
+
+sanitizer = true # Sanitize input HTML.
 minifier = true # Minify output HTML.
 brotli = false # Compress output HTML with Brotli.
