--- a/katsite-essentials/Cargo.toml
+++ b/katsite-essentials/Cargo.toml
@@ -17,6 +17,7 @@ htmlescape = "0.3"
 hyperbuild = "0.0"
 liquid = "0.20"
 rayon = "1.3"
+sass-rs = "0.2"
 serde = "1.0"
 serde_derive = "1.0"
 toml = "0.5"
