--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,17 +12,17 @@ edition = '2018'
 default-run = "katsite"
 
 [workspace]
-members = ["katsite-essentials", "katsite-favicons"]
+members = ["katsite-essentials", "katsite-favicons", "katsite-scss"]
 
 [dependencies]
-comrak = "=0.7.0"
-exitcode = "=1.1.2"
-glob = "=0.3.0"
-pulldown-cmark = "=0.7.1"
-rayon = "=1.3.0"
-serde = "=1.0.111"
-serde_derive = "=1.0.111"
-toml = "=0.5.6"
+comrak = "0.7"
+exitcode = "1.1"
+glob = "0.3"
+pulldown-cmark = "0.7"
+rayon = "1.3"
+serde = "1.0"
+serde_derive = "1.0"
+toml = "0.5"
 
 [profile.dev]
 rpath = true
