--- a/katsite-essentials/Cargo.toml
+++ b/katsite-essentials/Cargo.toml
@@ -10,14 +10,15 @@ edition = '2018'
 [dependencies]
 ammonia = "3.1"
 brotli = "3.3"
-extract-frontmatter = "1.0"
+extract-frontmatter = "2.0"
 exitcode = "1.1"
 glob = "0.3"
 htmlescape = "0.3"
-hyperbuild = "0.0"
-liquid = "0.20"
+liquid = "0.21"
+minify-html = { version = "0.3", features = ["js-esbuild"] }
 rayon = "1.3"
+sass-rs = "0.2"
 serde = "1.0"
 serde_derive = "1.0"
 toml = "0.5"
-urlencoding = "1.0"
+urlencoding = "1.1"
