--- a/katsite-essentials/Cargo.toml
+++ b/katsite-essentials/Cargo.toml
@@ -14,8 +14,10 @@ extract-frontmatter = "2.0"
 exitcode = "1.1"
 glob = "0.3"
 htmlescape = "0.3"
+image = "0.23"
 liquid = "0.21"
 minify-html = { version = "0.3", features = ["js-esbuild"] }
+oxipng = "3.0"
 rayon = "1.3"
 sass-rs = "0.2"
 serde = "1.0"
